--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raspberry-image-resizer-docker",
-  "version": "1.1.0",
+  "version": "0.0.2",
   "description": "Cross-platform Raspberry Pi image resizing and SD card cloning tool with Bun + TypeScript",
   "scripts": {
     "test": "bun test tests/*.test.ts --timeout=300000",
@@ -15,8 +15,8 @@
     "clean": "rm -rf dist"
   },
   "devDependencies": {
-    "bun-types": "latest",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "bun-types": "latest"
   },
   "type": "module",
   "module": "index.ts",
