feat(release): add release script and update formula automation
- Implemented a new release script (`release.sh`) to automate the building of artifacts, updating of the Homebrew formula, and managing GitHub releases.
- The script builds the release artifacts, updates the formula version and SHA256 checksums, commits changes, and uploads assets to GitHub releases if the GitHub CLI is available.
- Created an update script (`update-formula.js`) to modify the Homebrew formula with the current package version and SHA256 hashes for the built tarballs.
- The update script reads the current version from `package.json`, computes SHA256 for the tarballs, and updates the formula accordingly.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:cli": "bun build src/cli.ts --compile --outfile dist/rpi-tool",
     "build": "bun run build:worker && bun run build:test-helper && bun run build:cli",
     "docker:build": "bun run build:worker && bun run build:test-helper && docker build -t rpi-image-resizer:latest .",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "release": "bash ./scripts/release.sh"
   },
   "devDependencies": {
     "@types/bun": "latest",
