--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "raspberry-image-resizer-docker",
   "version": "0.0.5",
-  "description": "Cross-platform Raspberry Pi image resizing and SD card cloning tool with Bun + TypeScript",
+  "description": "Cross-platform Raspberry Pi image resizing and SD card cloning tool.",
   "scripts": {
     "test": "bun test tests/*.test.ts --timeout=300000",
     "test:unit": "bun test tests/*.test.ts --timeout=300000",
